--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
     "axios": "^0.19.2",
-    "date-fns": "^2.12.0",
+    "date-fns": "^2.16.1",
     "filesize": "^6.1.0",
     "history": "^4.10.1",
     "polished": "^3.6.2",
@@ -17,6 +17,7 @@
     "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^4.0.2",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2",
@@ -34,6 +35,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-loader-spinner": "^3.1.3",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^4.0.4",
     "@types/styled-components": "^5.1.0",
     "@types/yup": "^0.28.3",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
