--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "history": "^4.10.1",
     "polished": "^3.6.2",
     "react": "^16.13.1",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
     "react-icons": "^3.10.0",
@@ -32,6 +33,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-datepicker": "^3.1.3",
     "@types/react-dom": "^16.9.0",
     "@types/react-loader-spinner": "^3.1.3",
     "@types/react-router-dom": "^5.1.5",
